hphp/hack/test/typecheck/reactive/lambda_rx2.php
<?hh // partial

<<__RxShallow>>
function g(): int {
  return 1;
}

<<__Rx>>
function f(): void {
  // ERROR: lambda is rx, cannot call shallow
  $a = () ==> {
    g();
  };
}
